Fix sonarqube issues